deployments/apps/docs-main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-main
  namespace: apps
spec:
  selector:
    app: docs-main
  ports:
  - port: 80
    targetPort: 80
